syntax = "proto3";
option go_package = "github.com/nokia/ntt/protobuf";
package ntt;

import "parameter.proto";

// Test control service provides a set of operations to control and monitor the
// test execution.
//
// Control service is roughly equivalent to ETSI Test Controller and Management
// Interface (TCI-TM)
service Control {
	// RunTest executes a test case or control flow. It will return the ID
	// of the execution. The ID can be used to retrieve the results or to
	// cancel the execution.
	rpc RunTest(RunTestRequest) returns (RunTestResponse) {}

	// Subscribe returns a stream of events, such as execution results.
	rpc Subscribe(SubscribeRequest) returns (stream Event) {}

	// RegisterProject registers a project with the control service.
	rpc RegisterProject(RegisterProjectRequest) returns (RegisterProjectResponse) {}
}

message RunTestRequest {
	// Full qualified test case name or control function name.
	string name = 1;

	// Test case timeout in seconds.
	float timeout = 4;

	// Test case parameters.
	repeated Parameter parameters = 2;

	// Module parameters to be used for the test case.
	repeated Parameter module_parameters = 3;

	// The project ID the test case belongs to.
	string project_id = 5;
}

message RunTestResponse {
	// Execution ID.
	string ID = 1;
}

message SubscribeRequest {
}

message Event {
	string ID = 1;
}

message RegisterProjectRequest {

	// Project name.
	string name = 2;

	// Root directory of the project.
	string root_dir = 3;

	// Sources of the project.
	repeated string sources = 4;

	// Dependencies of the project.
	repeated string dependencies = 5;
}

message RegisterProjectResponse {
	// Project ID.
	string ID = 1;
}

